Fixed Navbar Alignment (#1258)

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -134,7 +134,7 @@ a {
 }
 
 .navbar-collapse.navbar-right {
-    padding-top: 15px;
+    padding: 7px 0;
 }
 
 a:hover {
