--- a/src/app/help/help.component.css
+++ b/src/app/help/help.component.css
@@ -125,7 +125,7 @@ a {
 }
 
 .navbar-collapse.navbar-right {
-	padding-top: 15px;
+	padding: 7px 0;
 }
 
 a:hover {
