--- a/src/app/terms/terms.component.css
+++ b/src/app/terms/terms.component.css
@@ -100,7 +100,7 @@ a {
 }
 
 .navbar-collapse.navbar-right {
-	padding-top: 15px;
+	padding: 7px 0;
 }
 
 a:hover {
